<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".ui.fragment.RegisterFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            style="@style/TextStyle"
            android:layout_gravity="center_horizontal"
            android:text="@string/register"
            android:textSize="30sp"
            android:textStyle="bold" />

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="20dp"
            app:cardCornerRadius="10dp">

            <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:contentDescription="@string/logo"
                android:src="@drawable/ic_launcher_background" />
        </androidx.cardview.widget.CardView>

        <EditText
            android:id="@+id/input_nama"
            style="@style/InputTextStyle"
            android:hint="@string/masukkan_nama"
            android:inputType="text"
            tools:ignore="Autofill" />

        <EditText
            android:id="@+id/input_email"
            style="@style/InputTextStyle"
            android:layout_marginTop="10dp"
            android:hint="@string/masukkan_email"
            android:inputType="textEmailAddress"
            tools:ignore="Autofill" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/input_password"
                style="@style/InputTextStyle"
                android:layout_marginTop="10dp"
                android:hint="@string/masukkan_password"
                android:inputType="textPassword"
                tools:ignore="Autofill" />

            <ImageView
                android:id="@+id/btn_view_pass"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_alignTop="@+id/input_password"
                android:layout_alignEnd="@+id/input_password"
                android:layout_alignBottom="@+id/input_password"
                android:layout_marginEnd="5dp"
                android:contentDescription="@string/see_password"
                android:src="@drawable/ic_outline_remove_green_eye_24" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/input_konf_password"
                style="@style/InputTextStyle"
                android:layout_marginTop="10dp"
                android:hint="@string/masukkan_konfirmasi_password"
                android:inputType="textPassword"
                tools:ignore="Autofill" />

            <ImageView
                android:id="@+id/btn_view_konf_pass"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginEnd="5dp"
                android:layout_alignEnd="@+id/input_konf_password"
                android:layout_alignTop="@+id/input_konf_password"
                android:layout_alignBottom="@+id/input_konf_password"
                android:contentDescription="@string/see_password"
                android:src="@drawable/ic_outline_remove_green_eye_24" />

        </RelativeLayout>

    </LinearLayout>


    <Button
        android:id="@+id/btn_register"
        style="@style/ButtonStyle"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="80dp"
        android:text="@string/register" />

</RelativeLayout>