<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".view.fragment.LoginFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="20dp"
            app:cardCornerRadius="10dp">

            <ImageView
                android:layout_width="170dp"
                android:layout_height="170dp"
                android:contentDescription="@string/logo"
                android:src="@drawable/img_tmdb" />
        </androidx.cardview.widget.CardView>

        <EditText
            android:id="@+id/input_email"
            style="@style/InputTextStyle"
            android:background="@drawable/style_edit_text"
            android:hint="@string/masukkan_email"
            android:inputType="textEmailAddress"
            tools:ignore="Autofill" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/input_password"
                style="@style/InputTextStyle"
                android:layout_marginTop="10dp"
                android:hint="@string/masukkan_password"
                android:inputType="textPassword"
                tools:ignore="Autofill" />

            <ImageView
                android:id="@+id/btn_view_pass"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginEnd="5dp"
                android:layout_alignEnd="@+id/input_password"
                android:layout_alignTop="@+id/input_password"
                android:layout_alignBottom="@+id/input_password"
                android:contentDescription="@string/see_password"
                android:src="@drawable/ic_outline_remove_green_eye_24" />
        </RelativeLayout>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/btn_login"
            style="@style/ButtonStyle"
            android:text="@string/login" />

        <TextView
            android:id="@+id/btn_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="0dp"
            android:background="@color/transparent"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/belum_punya_akun"
            android:textAllCaps="false"
            android:textColor="@color/midnight_blue"
            android:textSize="14sp"
            android:textStyle="bold" />
    </LinearLayout>

</RelativeLayout>