<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragment.DetailFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp">

        <ProgressBar
            android:id="@+id/progress_circular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true" />

        <RelativeLayout
            android:id="@+id/rv_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_rating_background"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_alignEnd="@+id/img_background_detail"
                android:layout_margin="20dp"
                android:backgroundTint="@color/green_rating"
                android:elevation="10dp"
                android:translationZ="5dp"
                app:cardCornerRadius="25dp">

                <androidx.cardview.widget.CardView
                    android:id="@+id/cv_rating_yellow"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_alignStart="@+id/img_background_detail"
                    android:layout_alignBottom="@+id/img_background_detail"
                    android:backgroundTint="@color/yellow_rating"
                    android:elevation="10dp"
                    android:translationZ="5dp"
                    android:visibility="invisible"
                    app:cardCornerRadius="25dp">

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/cv_rating_red"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_alignStart="@+id/img_background_detail"
                    android:layout_alignBottom="@+id/img_background_detail"
                    android:backgroundTint="@color/red_rating"
                    android:elevation="10dp"
                    android:translationZ="5dp"
                    android:visibility="invisible"
                    app:cardCornerRadius="25dp">

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/cv_rating"
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:layout_alignStart="@+id/img_background_detail"
                    android:layout_alignBottom="@+id/img_background_detail"
                    android:layout_gravity="center"
                    android:backgroundTint="@color/midnight_blue_variant"
                    android:elevation="10dp"
                    android:translationZ="5dp"
                    app:cardCornerRadius="25dp">

                    <TextView
                        android:id="@+id/tv_rating"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/_0_0"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                </androidx.cardview.widget.CardView>

            </androidx.cardview.widget.CardView>

            <ImageView
                android:id="@+id/img_background_detail"
                android:layout_width="match_parent"
                android:layout_height="350dp"
                android:contentDescription="@string/image"
                android:scaleType="centerCrop"
                android:tintMode="multiply"
                app:srcCompat="@color/midnight_blue"
                app:tint="#212223" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_img_movie"
                android:layout_width="150dp"
                android:layout_height="200dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                app:cardCornerRadius="10dp">

                <ImageView
                    android:id="@+id/img_movie"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="fitXY" />
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/tv_movie"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/cv_img_movie"
                android:layout_marginHorizontal="10dp"
                android:gravity="center_horizontal"
                android:text="@string/movie_name"
                android:textColor="@color/white"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_genre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_tagline"
                android:gravity="center"
                android:text="@string/genre"
                android:textColor="#B6B6B6"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tv_tagline"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_movie"
                android:gravity="center_horizontal"
                android:text="@string/tagline"
                android:textColor="#B6B6B6"
                android:textSize="16sp"
                android:textStyle="italic" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/img_background_detail"
                android:layout_marginHorizontal="10dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/kilasan_singkat"
                    android:textColor="@color/black"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_overview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/kilasan_singkat"
                    android:textColor="@color/black" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pemeran"
                    android:textColor="@color/black"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_cast"
                    android:layout_width="match_parent"
                    android:layout_height="270dp"
                    android:orientation="horizontal"
                    tools:itemCount="5"
                    tools:listitem="@layout/item_cast" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/similiar_movie"
                    android:textColor="@color/black"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_similiar"
                    android:layout_width="match_parent"
                    android:padding="10dp"
                    android:layout_height="190dp"
                    android:orientation="horizontal"
                    tools:itemCount="5"
                    tools:listitem="@layout/item_similiar" />

            </LinearLayout>
        </RelativeLayout>
    </RelativeLayout>

</ScrollView>