<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:elevation="7dp"
    android:layout_marginEnd="10dp"
    android:translationZ="7dp"
    app:cardCornerRadius="10dp">
    <RelativeLayout
        android:layout_width="150dp"
        android:layout_height="250dp">

        <ImageView
            android:id="@+id/img_movie"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:contentDescription="@string/image"
            android:scaleType="fitXY"
            android:src="@drawable/ic_launcher_background" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_rating_background"
            android:layout_width="38dp"
            android:layout_height="38dp"
            android:layout_alignStart="@+id/img_movie"
            android:layout_alignBottom="@+id/img_movie"
            android:layout_marginStart="14dp"
            android:layout_marginBottom="-17dp"
            android:backgroundTint="@color/green_rating"
            android:elevation="10dp"
            android:translationZ="5dp"
            app:cardCornerRadius="20dp">

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_rating_yellow"
                android:layout_width="38dp"
                android:layout_height="38dp"
                android:layout_alignStart="@+id/img_background_detail"
                android:layout_alignBottom="@+id/img_background_detail"
                android:backgroundTint="@color/yellow_rating"
                android:elevation="10dp"
                android:translationZ="5dp"
                android:visibility="invisible"
                app:cardCornerRadius="20dp">

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_rating_red"
                android:layout_width="38dp"
                android:layout_height="38dp"
                android:layout_alignStart="@+id/img_background_detail"
                android:layout_alignBottom="@+id/img_background_detail"
                android:backgroundTint="@color/red_rating"
                android:elevation="10dp"
                android:translationZ="5dp"
                android:visibility="invisible"
                app:cardCornerRadius="20dp">

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_rating"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_alignStart="@+id/img_background_detail"
                android:layout_alignBottom="@+id/img_background_detail"
                android:layout_gravity="center"
                android:backgroundTint="@color/midnight_blue_variant"
                android:elevation="10dp"
                android:translationZ="5dp"
                app:cardCornerRadius="20dp">

                <TextView
                    android:id="@+id/tv_rating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/_0_0"
                    android:textStyle="bold" />

            </androidx.cardview.widget.CardView>

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/tv_movie"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/cv_rating_background"
            android:layout_marginHorizontal="5dp"
            android:layout_marginTop="15dp"
            android:text="@string/movie_title"
            android:textColor="@color/black"
            android:textSize="17sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_movie"
            android:layout_marginHorizontal="5dp"
            android:text="@string/release_date"
            android:textSize="14sp" />

    </RelativeLayout>


</androidx.cardview.widget.CardView>